# weather-utils

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: audit.yml  general.yml  release-plz.yml
.zed/: tasks.json
src/: humidity.rs  lib.rs  pressure.rs  temperature.rs  unit.rs
